# netatalk

./: .astylerc  .cvsignore  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .markdownlint.json  .perltidyrc  .travis.yml  .yamlfmt.yaml  AGENTS.md  APPLETALK.md  AUTHORS  BUGS  CHANGES  CODE_OF_CONDUCT.md  COMPILATION.md  CONTAINERS.md  CONTRIBUTING.md  CONTRIBUTORS  CONTRIBUTORS.md  COPYRIGHT  ChangeLog  DEVELOPER.md  DOCKER.md  Dockerfile  Dockerfile.testsuite  FAQ  INSTALL  INSTALL.md  Makefile  Makefile.am  NEWS  NEWS.md  README  README.ASUN  README.MORGAN  README.md  SECURITY.md  (+18 more)
config/: .cvsignore  .gitignore  AppleVolumes.default  AppleVolumes.default.tmpl  AppleVolumes.system  AppleVolumes.system.cobalt  Makefile.am  README  afp.conf  afp.conf.in  afp.conf.tmpl  afp_ldap.conf  afpd.conf  afpd.conf.tmpl  atalkd.conf  atalkd.conf.cobalt  dbus-session.conf  dbus-session.conf.tmpl  extmap.conf  libatalk.conf.in  macipgw.conf  meson.build  netatalk-dbus.conf  netatalk.conf  netatalk.conf.cobalt  netatalk.pamd  netatalk.pamd.shadow  pap.in  papd.conf  services.atalk  tracker.cfg
config/dconf/: meson.build  netatalk
config/pam/: .cvsignore  .gitignore  Makefile.am  meson.build
config/selinux/: netatalk.sh  netatalk.te  netatalk_selinux.spec
contrib/a2boot/: .cvsignore  .gitignore  COPYRIGHT  Makefile.am  a2boot.c  meson.build
contrib/bin_utils/: addump.pl  afpstats.pl  macusers.pl  meson.build
contrib/macipgw/: COPYRIGHT  README  atp_input.c  atp_input.h  common.h  macip.c  macip.h  main.c  meson.build  nbp_lkup_async.c  nbp_lkup_async.h  tunnel.h  tunnel_bsd.c  tunnel_linux.c  util.c  util.h
contrib/shell_utils/: .cvsignore  .gitignore  Makefile.am  addump.in  addump.pl  afpd-mtab.pl  afpd-mtab.pl.in  afpstats  afpstats.in  afpstats.pl  apple_cleanup.in  apple_cp  apple_cp.in  apple_dump.in  apple_mv  apple_mv.in  apple_rm  apple_rm.in  asaddump.in  asip-status.in  asip-status.pl  asip-status.pl.in  cleanappledouble.pl  cleanappledouble.pl.in  codefmt.sh  docker-entrypoint.sh  fce_ev_script.sh  icn_hex_to_c.py  lp2pap.sh.in  lp2pap.tmpl  macusers.in  macusers.pl  make-casetable.pl  make-precompose.h.pl  make_compile_docs.pl  meson.build  netatalk_container_entrypoint.sh  netatalkshorternamelinks.pl  netatalkshorternamelinks.pl.in  webmin_container_entrypoint.sh
contrib/timelord/: .cvsignore  .gitignore  COPYRIGHT  Makefile  Makefile.am  README  meson.build  timelord.c
contrib/webmin_module/: README.md  config.in  config.info  control.cgi  delete_atalk.cgi  delete_sections.cgi  edit_atalk.cgi  edit_extmap.cgi  edit_global_section.cgi  edit_print.cgi  edit_vol_section.cgi  index.cgi  meson.build  module.info.in  netatalk-lib.pl  netatalk-lib.pl.in  rebuild_db.cgi  restart.cgi  save_atalk.cgi  save_extmap.cgi  save_global_section.cgi  save_print.cgi  save_vol_section.cgi  server_status.cgi  show_atalk.cgi  show_users.cgi  start.cgi  stop.cgi
distrib/initscripts/: .cvsignore  .gitignore  Makefile.am  README  a2boot.service.tmpl  afpd.service.tmpl  atalkd.service.tmpl  cnid.service.tmpl  com.netatalk.daemon.plist  com.netatalk.daemon.plist.tmpl  debian.a2boot.in  debian.atalkd.in  debian.macipgw.in  debian.netatalk.in  debian.papd.in  debian.timelord.in  freebsd.netatalk.in  io.netatalk.daemon.plist.tmpl  macos.netatalk.in  macos.netatalk.plist.in  meson.build  netatalk.xml.tmpl  netatalkd  netatalkd.tmpl  netbsd.a2boot.in  netbsd.atalkd.in  netbsd.macipgw.in  netbsd.netatalk.in  netbsd.papd.in  netbsd.timelord.in  openbsd.netatalk.in  openrc.a2boot.in  openrc.atalkd.in  openrc.macipgw.in  openrc.netatalk.in  openrc.papd.in  openrc.timelord.in  papd.service.tmpl  rc.a2boot.netbsd.tmpl  rc.afpd.netbsd.tmpl  (+47 more)
doc/: .cvsignore  .gitignore  CONFIGURE  COPYRIGHT.mtab  DEVELOPER  DEVELOPER.md  Doxyfile.in  FAQ  INSTALL  INSTALL.txt  Makefile  Makefile.am  README  README.ACLs  README.AppleTalk  README.FREEBSD  README.GENERIC  README.LINUX  README.NETBSD  README.SOLARIS  README.TRU64  README.ULTRIX  README.acls  README.cnid  README.documentation  README.hidden-items  README.ids  README.logger  README.mtab  README.mtab.distribution  README.platforms  README.veto  TODO2.1  checkinmans.sh  doxygen_filter_mermaid.sh  doxygen_filter_yacc.sh  footer.html  generate_compile_docs.py  header.html  html-www.xsl.in  (+6 more)
doc/developer/: cnid-dbd-protocol.md  cnid.md  ddp.md  developer.md  dircache.md  dsi.md  indexing.md  libatalk.md  logging.md  profiling.md
doc/gfx/: logo.ai
doc/gfx_and_css/: netatalk.css
doc/ja/: Makefile.am  html-www.xsl.in  html.xsl.in  meson.build
doc/manpages/: Makefile.am  make_man.sh  meson.build
doc/manual/: .gitignore  ACL.md  AppleTalk.md  Authentication.md  CNID.md  Charsets.md  Compilation.md  Configuration.md  Dircache.md  FCE.md  Installation.md  Interoperability.md  Legal.md  License.md  Makefile  Makefile.am  README  Search.md  Upgrade.md  Upgrading.md  _Navlinks.md  _Navlinks_atalk.md  _Sidebar.md  appletalk.md  appletalk.xml  checkinmans.sh  compile.xml  configuration.xml  generate_compile_docs.py  gpl.xml  html.xsl  index.md  install.md  install.xml  intro.xml  man.xsl  manual.xml  manual.xml.in  meson.build  netatalk.css  (+5 more)
doc/po/: ACL.md.ja.po  AppleTalk.md.ja.po  Authentication.md.ja.po  CNID.md.ja.po  Charsets.md.ja.po  Compilation.md.ja.po  Configuration.md.ja.po  Dircache.md.ja.po  FCE.md.ja.po  Installation.md.ja.po  Interoperability.md.ja.po  Legal.md.ja.po  License.md.ja.po  Search.md.ja.po  Upgrade.md.ja.po  Upgrading.md.ja.po  _Navlinks.md.ja.po  _Navlinks_atalk.md.ja.po  _Sidebar.md.ja.po  a2boot.8.md.ja.po  ad.1.md.ja.po  addump.1.md.ja.po  aecho.1.md.ja.po  afp.conf.5.md.ja.po  (+45 more)
libatalk/: .gitignore  Makefile  Makefile.am  dummy.c  libatalk-3.0.1dev.abi  libatalk-3.0.5.abi  libatalk-3.0.6.abi  libatalk-3.0beta1.abi  libatalk-3.0dev.abi  libatalk-3.1.0.abi  libatalk-3.1.1.abi  libatalk-3.1.10.abi  libatalk-3.1.12.abi  libatalk-3.1.13.abi  libatalk-3.1.2.abi  libatalk-3.1.3.abi  libatalk-3.1.4.abi  libatalk-3.1.8.abi  meson.build  meson.build2
test/: Makefile.am  meson.build  test_byteorder.c
(+1626 files in other folders)
